--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-/src/node_modules
-/src/public/hot
-/src/public/storage
-!/src/public/fruits-img
-/src/storage/*.key
-/src/vendor
-/src/.env
-/src/.env.backup
-/src/.phpunit.result.cache
-/src/docker-compose.override.yml
-/src/Homestead.json
-/src/Homestead.yaml
-/src/npm-debug.log
-/src/yarn-error.log
-/src/.idea
-/src/.vscode
-/docker/mysql/data
+# Ignore MySQL data
+docker/mysql/data/
+
+# その他不要なディレクトリ
+/vendor
+/node_modules
+/public/storage
+/storage/*.key
+.env
